[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Rudyard Richter <richter3141@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022", from = "src"}]

[tool.poetry.scripts]
aoc = "aoc_2022.__main__:main"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
requests = "^2.28.1"
pytest = "^7.2.0"
numpy = "^1.24.1"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
